auth-server-oracle/.kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  annotations:
    app.gitlab.com/app: "${CI_PROJECT_PATH_SLUG}"
    app.gitlab.com/env: "${CI_ENVIRONMENT_SLUG}"
  labels:
    app: auth-server
    env: "${CI_ENVIRONMENT_SLUG}"
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      name: auth-server
      labels:
        app: auth-server
        env: "${CI_ENVIRONMENT_SLUG}"
        tier: backend
    spec:
      containers:
        - name: auth-server
          image: "${PRIVATE_REGISTRY_PULL}/${CI_REGISTRY_NAMESPACE}/${CI_REGISTRY_IMAGE}:${CI_IMAGE_VERSION}"
          imagePullPolicy: "Always"
      imagePullSecrets:
        - name: nexus-regcred
      restartPolicy: Always
  selector:
    matchLabels:
      app: auth-server
      env: "${CI_ENVIRONMENT_SLUG}"
      tier: backend
