auth-server-oracle/.kubernates/istio.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway.default.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /tabeldata-oauth2-auth-server
      route:
        - destination:
            port:
              number: 8080
            host: auth-service.auth.svc.cluster.local
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            port:
              number: 9090
            host: api-service.api.svc.cluster.local
